Bug 828887 - "unused-arenas" is not freed unless worker is idle for 5 seconds. r=bent